tests/fail/invalidrecordtag/invalidrecordtag.tvpd
<?xml version='1.0' encoding='utf-8'?>
<vpd>
  <name>FILENAME</name>
  <size>16kb</size>
  <VD>01</VD>
  <record name="VINI">
    <rdisc>The VINI record</rdisc>
    <keyword name="RT">
      <kwdesc>The Record Type keyword</kwdesc>
      <kwformat>ascii</kwformat>
      <kwlen>4</kwlen>
      <kwdata>VINI</kwdata>
    </keyword>
    <keyword name="AS">
      <kwdesc>The ascii keyword</kwdesc>
      <kwformat>ascii</kwformat>
      <kwlen>20</kwlen>
      <kwdata>This is text data</kwdata>
    </keyword>
    <keyword name="HX">
      <kwdesc>The Hex keyword</kwdesc>
      <kwformat>hex</kwformat>
      <kwlen>4</kwlen>
      <kwdata>00000000</kwdata>
    </keyword>
  </record>
</vpd>
